Improve constraint generation